# rules_uniffi

./: .gitattributes  .gitignore  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE.bazel
.bcr/: metadata.template.json
.github/workflows/: release.yml  release_prep.sh
docs/: BUILD.bazel
uniffi/: BUILD.bazel  defs.bzl  repositories.bzl
uniffi/private/: BUILD.bazel
uniffi/private/generate/: BUILD.bazel  Cargo.toml  defs.bzl
uniffi/private/generate/src/: bazel_mode.rs  main.rs
