[package]
name = "generate"
version = "0.0.1"
edition = "2021"
keywords = ["bazel"]
license = "Apache-2.0"

[dependencies]
anyhow = "*"
uniffi_bindgen = { version = "0.27.1", features = ["clap"] }
uniffi_meta = "*"
camino = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4", features = ["cargo", "std", "derive"] }
